# GitHub-Repository-Analyzer

./: LICENSE  README.md  SECURITY.md  __init__.py  analyzer.py  config.py  data_collector.py  main.py  pyproject.toml  requirements.txt  setup.py  utils.py  visualizer.py
.github/: dependabot.yml
demo/: interactive-demo.ipynb
github_repository_analyzer/: __init__.py  analyzer.py  config.py  data_collector.py  main.py  utils.py  visualizer.py
