[build-system]
requires = ["setuptools>=65.0", "wheel", 'setuptools-scm']
build-backend = "setuptools.build_meta"

[project]
name = "GitHubRepositoryAnalyzer"
description = "Advanced GitHub repository analysis tool with trend prediction capabilities"
authors = [
    {name = "Christian Abele", email = "christian.abele@uni-bielefeld.de"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["github", "analysis", "trends", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
    "numpy>=1.22",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "plotly>=5.11",
    "scikit-learn>=1.2",
    "python-dotenv>=0.21",
    "tqdm>=4.64",
    "types-requests>=2.28",
]
dynamic = ["version", 'scripts']

[project.optional-dependencies]
dev = [
    "black>=23.3",
    "flake8>=6.0",
    "mypy>=1.3",
    "pytest>=7.3",
    "pytest-cov>=4.0",
    "ipython>=8.12",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[project.urls]
Homepage = "https://github.com/ChristianAbele02/GitHub-Repository-Analyzer"
Documentation = "https://github.com/ChristianAbele02/GitHub-Repository-Analyzer#readme"
Issues = "https://github.com/ChristianAbele02/GitHub-Repository-Analyzer/issues"

[tool.setuptools]
package-dir = { "" = "github_repository_analyzer" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["github_repository_analyzer"]

[tool.setuptools_scm] #Uses Git tags for versioning